Add favicon images, site manifest, robots.txt, and sitemap.xml
- Added favicon-16x16.png, favicon-32x32.png, and favicon.ico to enhance site branding.
- Created site.webmanifest for better integration with mobile devices and browsers.
- Added robots.txt to manage web crawler access and specify crawl delay.
- Implemented sitemap.xml to improve SEO and provide search engines with site structure.

--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,99 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>ProFolio</title>
+  <title>Younes MRABTI - Full Stack Developer & GIS Specialist</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  
+  <!-- SEO Meta Tags -->
+  <meta name="description" content="Full Stack Developer & GIS Specialist with expertise in modern web technologies, mobile development, and geospatial solutions. Passionate about creating innovative platforms and contributing to the developer community.">
+  <meta name="keywords" content="full stack developer, GIS specialist, web development, mobile development, Angular, React, Node.js, TypeScript, JavaScript, Python, geospatial solutions, software engineer, frontend developer, backend developer">
+  <meta name="author" content="Younes MRABTI">
+  <meta name="robots" content="index, follow">
+  <meta name="language" content="en">
+  <meta name="revisit-after" content="7 days">
+  
+  <!-- Open Graph Meta Tags -->
+  <meta property="og:title" content="Younes MRABTI - Full Stack Developer & GIS Specialist">
+  <meta property="og:description" content="Full Stack Developer & GIS Specialist with expertise in modern web technologies, mobile development, and geospatial solutions.">
+  <meta property="og:image" content="https://www.youmti.net/assets/images/profile-og.jpg">
+  <meta property="og:url" content="https://www.youmti.net">
+  <meta property="og:type" content="website">
+  <meta property="og:site_name" content="Younes MRABTI Portfolio">
+  <meta property="og:locale" content="en_US">
+  <meta property="og:locale:alternate" content="fr_FR">
+  
+  <!-- Twitter Card Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Younes MRABTI - Full Stack Developer & GIS Specialist">
+  <meta name="twitter:description" content="Full Stack Developer & GIS Specialist with expertise in modern web technologies, mobile development, and geospatial solutions.">
+  <meta name="twitter:image" content="https://www.youmti.net/assets/images/profile-og.jpg">
+  <meta name="twitter:creator" content="@yourtwitterhandle">
+  
+  <!-- Additional SEO Meta Tags -->
+  <meta name="theme-color" content="#667eea">
+  <meta name="msapplication-TileColor" content="#667eea">
+  <meta name="application-name" content="Younes MRABTI Portfolio">
+  
+  <!-- Canonical URL -->
+  <link rel="canonical" href="https://www.youmti.net/">
+  
+  <!-- Alternate Language Links -->
+  <link rel="alternate" hreflang="en" href="https://www.youmti.net/">
+  <link rel="alternate" hreflang="fr" href="https://www.youmti.net/fr">
+  <link rel="alternate" hreflang="x-default" href="https://www.youmti.net/">
+  
+  <!-- Favicon and Icons -->
+  <link rel="icon" type="image/x-icon" href="assets/icons/favicon.ico">
+  <link rel="apple-touch-icon" sizes="180x180" href="assets/icons/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/icons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="assets/icons/favicon-16x16.png">
+  <link rel="manifest" href="manifest.json">
+  
+  <!-- Preconnect to external domains -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  
+  <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  
+  <!-- JSON-LD Structured Data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Person",
+    "name": "Younes MRABTI",
+    "jobTitle": "Full Stack Developer & GIS Specialist",
+    "description": "Full Stack Developer & GIS Specialist with expertise in modern web technologies, mobile development, and geospatial solutions. Passionate about creating innovative platforms and contributing to the developer community.",
+    "url": "https://www.youmti.net",
+    "image": "https://www.youmti.net/assets/images/profile-og.jpg",
+    "sameAs": [
+      "https://linkedin.com/in/yourprofile",
+      "https://github.com/yourusername",
+      "https://twitter.com/yourtwitterhandle"
+    ],
+    "knowsAbout": [
+      "Web Development",
+      "Mobile Development",
+      "GIS",
+      "Angular",
+      "React",
+      "Node.js",
+      "TypeScript",
+      "JavaScript",
+      "Python"
+    ],
+    "worksFor": {
+      "@type": "Organization",
+      "name": "Freelance Developer"
+    },
+    "address": {
+      "@type": "PostalAddress",
+      "addressCountry": "Country"
+    }
+  }
+  </script>
 </head>
 <body>
   <pro-root></pro-root>
